include admin template

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,13 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/assets/plugins/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="/assets/dist/css/adminlte.min.css">
-
-    <title>Vite + React</title>
+    
+    <title>React + Vite + AdminLTE3</title>
   </head>
   <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-
     <script type="module" src="/src/main.jsx"></script>
     <script src="/assets/plugins/jquery/jquery.min.js"></script>
     <script src="/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
